# quiz-game

./: .gitignore  Makefile  pyproject.toml
src/quiz_game/: fetch_questions.py  main.py  quiz_brain.py
tests/: test_fetch_questions.py  test_question_model.py  test_quiz_brain.py
