[project]
name = "quiz-game"
version = "0.1.0"
description = ""
authors = [{ name = "David Bambrough", email = "djbambrough@mac.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pytest (>=9.0.2,<10.0.0)", "requests (>=2.32.5,<3.0.0)"]

[tool.poetry]
packages = [{ include = "quiz_game", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["ruff (>=0.14.10,<0.15.0)", "pytest (>=9.0.2,<10.0.0)"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
